# ucas-compiler

./: .gitignore  README.md
ast-interpreter/: ASTInterpreter.cpp  CMakeLists.txt  Environment.cpp  Environment.h  requirements.md
ast-interpreter/testcases/: extern_func.c  gen-clang-ast.sh
ast-interpreter/testcases/class/: ex.c
ast-interpreter/testcases/self/: ast-test.c  test00.c  test01.c  test02.c  test03.c  test04.c  test05.c  test06.c  test07.c  test08.c  test09.c  test10.c  test11.c
point-to-analysis/: CMakeLists.txt  LLVMAssignment.cpp  Liveness.h
point-to-analysis/assign3-tests/: test02.ll  test08.ll  test11.ll  test12.ll  test20.ll  test21.ll  test22.ll
use-def/: CMakeLists.txt  HomeworkLLVMPass.cpp  HomeworkLLVMPass.h  main.cpp
use-def/assign2-tests/: test04.ll  test11.ll  test14.ll  test17.ll  test19.ll
